Make sure videos stay within their container, especially on smaller viewports

--- a/public/template/src/scss/_typography.scss
+++ b/public/template/src/scss/_typography.scss
@@ -109,3 +109,7 @@ blockquote {
         margin-bottom: 0;
     }
 }
+
+iframe, object, video {
+    max-width: 100%;
+}
